--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ description = "Rust interdiff implementation"
 edition = "2018"
 
 [dependencies]
+env_logger = "0.6.0"
+log = "0.4.6"
 clap = "2.32"
 
 patch-rs = { path = "../patch-rs" }
