--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "interdiff-rs"
-version = "0.1.2"
+version = "0.2.0"
 authors = ["hedgar2017 <hedgar2017@gmail.com>"]
 license = "MIT"
 description = "Rust interdiff implementation"
@@ -11,4 +11,4 @@ env_logger = "0.6.0"
 log = "0.4.6"
 clap = "2.32"
 
-patch-rs = { path = "../patch-rs" }
+patch-rs = "0.6.2"
